[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/PauseMenu.gd" id="1_pause"]
[ext_resource type="FontFile" uid="uid://kfh6ooeul77g" path="res://.godot/imported/Bake Soda.otf-67efc852d110561bc03b480b4cee5804.fontdata" id="2_font"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 4
script = ExtResource("1_pause")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 64
text = "DURAKLATILDI"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "DEVAM ET"
custom_minimum_size = Vector2(300, 60)

[node name="MainMenuButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "ANA MENÃœ"
custom_minimum_size = Vector2(300, 60)

